--- a/app/globals.css
+++ b/app/globals.css
@@ -4,65 +4,65 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
+    --background: #EEF7FF;
+    --foreground: #4D869C;
+    
+    --card: #EEF7FF;
+    --card-foreground: #4D869C;
+    
+    --popover: #EEF7FF;
+    --popover-foreground: #4D869C;
+    
+    --primary: #4D869C;
+    --primary-foreground: #EEF7FF;
+    
+    --secondary: #7AB2B2;
+    --secondary-foreground: #4D869C;
+    
+    --muted: #EEF7FF;
+    --muted-foreground: #4D869C;
+    
+    --accent: #CDE8E5;
+    --accent-foreground: #4D869C;
+    
+    --destructive: #E02F44;
+    --destructive-foreground: #CCE2FF;
+    
+    --border: #4D869C;
+    --input: #7AB2B2;
+    --ring: #4D869C;
+    
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: #222222;
+    --foreground: #EEF7FF;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --card: #333333;
+    --card-foreground: #FFFFFF;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --popover: #333333;
+    --popover-foreground: #FFFFFF;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: #4D869C;
+    --primary-foreground: #EEF7FF;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+    --secondary: #7AB2B2;
+    --secondary-foreground: #4D869C;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted: #EEF7FF;
+    --muted-foreground: #4D869C;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent: #CDE8E5;
+    --accent-foreground: #4D869C;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive: #E02F44;
+    --destructive-foreground: #CCE2FF;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --border: #7AB2B2;
+    --input: #7AB2B2; 
+    --ring: #4D869C;
   }
 }
 
