--- a/app/globals.css
+++ b/app/globals.css
@@ -170,6 +170,10 @@
     @apply py-4 px-6 flex-center gap-3 rounded-full p-16-semibold focus-visible:ring-offset-0 focus-visible:ring-transparent !important;
   }
 
+  .button-gradient {
+    @apply bg-gradient-to-r from-blue-400 to-blue-700 hover:from-blue-600 hover:to-blue-800;
+  }
+
   .dropdown-content {
     @apply shadow-lg rounded-md overflow-hidden p-0;
   }
